--- a/style.css
+++ b/style.css
@@ -1879,8 +1879,8 @@ section>* {
     pointer-events: none;
     z-index: 1;
     background-image: 
-        linear-gradient(rgba(59, 130, 246, 0.15) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(59, 130, 246, 0.15) 1px, transparent 1px);
+        linear-gradient(rgba(225, 6, 0, 0.15) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(225, 6, 0, 0.15) 1px, transparent 1px);
     background-size: 50px 50px;
     background-position: center center;
     -webkit-mask-image: radial-gradient(circle 350px at var(--mouse-x, 0px) var(--mouse-y, 0px), black 0%, transparent 100%);
